LayeredBuffer and Deutsch Enchantments